<resources>
    <string name="app_name">sPlayer</string>
    <string name="txt_scan_video">扫描本地视频</string>
    <string name="txt_scan_music">扫描本地音乐</string>
    <string name="txt_settings">Settings</string>
    <string name="app_version">Version 0.0.3</string>
    <string name="app_copyright">Copyright © 2023 sPlayer. All Rights Reserved.</string>
    <string name="btn_txt_about">关于</string>
    <string name="btn_txt_restart_app">重启</string>
    <string name="tv_txt_more">其 他</string>
    <string name="tv_txt_default_cache">0.0MB</string>
    <string name="btn_txt_clear_cache">清空缓存</string>
    <string name="btn_txt_deep_scan">深度搜索模式</string>
    <string name="tv_txt_advance">高 级</string>
    <string name="tv_toolbar_titile">设 置</string>
    <string name="unknown_artist">未知艺术家</string>
    <string name="unknown_album">未知专辑</string>
    <string name="tv_txt_title">关 于</string>
    <string name="tv_txt_default_song_name">歌曲名</string>
    <string name="tv_txt_default_singer">歌手</string>
    <string name="tv_txt_default_current_time">00:00</string>
    <string name="tv_txt_default_duration">00:00</string>
    <string name="tv_txt_ma_title">本地音乐</string>
    <string name="tv_txt_default_song_info">Music - sPlayer</string>
    <string name="tv_txt_lv_title">本地视频</string>
    <string name="tv_txt_file_name_pl">文件名:</string>
    <string name="tv_txt_file_name_val">this.is.A.Tee.\nffffafhajfanfihnakfnkakjffagaghaga</string>
    <string name="tv_txt_file_path_pl">路径:</string>
    <string name="tv_txt_file_path_val">C:\\Windows\\appcompat\\encapsulation</string>
    <string name="tv_txt_file_size_pl">大小:</string>
    <string name="tv_txt_file_size_val">14.68MB</string>
    <string name="tv_txt_file_duration_pl">时长:</string>
    <string name="tv_txt_file_duration_val">04:38</string>
    <string name="tv_txt_file_resolution_pl">分辨率:</string>
    <string name="tv_txt_file_resolution_val">1280x720</string>
    <string name="tv_txt_file_type_pl">类型:</string>
    <string name="tv_txt_file_type_val">mp2ts/mp2ts</string>
    <string name="tv_txt_file_mt_pl">修改时间:</string>
    <string name="tv_txt_file_mt_val">2020-09-19 12:19:09</string>
</resources>