<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    tools:context=".UI.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/baseline_back_arrow">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="关  于"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_150"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_gravity="center_horizontal|bottom"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/app_name"
            android:textColor="@color/dark_gray"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_version"
            android:textColor="#9c9c9c"
            android:textSize="13sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_50"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_copyright"
            android:textColor="#9c9c9c"
            android:textSize="15sp" />


    </LinearLayout>


</LinearLayout>